# conversion-api

./: CNAME  README.md  docker-compose.yml  example.csv  example.json  example.tsv  index.html  pyproject.toml  swagger.json
api/: swagger.json
src/: start.py
src/api_server/: __init__.py  server.py
src/api_server/app/: app.py  dependancy.py
src/api_server/app/v1/routes/: __init__.py  conversion.py
src/api_server/app/v1/schema/response/: __init__.py
src/api_server/app/v1/schema/response/errors/: __init__.py  base.py  common.py
src/conversion_worker/: __init__.py
src/conversion_worker/usecases/: __init__.py
src/conversion_worker/usecases/conversion_usecases/: __init__.py  csv_conversion_usecase.py  errors.py  tsv_conversion_usecase.py
src/utils/: environment.py
