[project]
name = "conversion-app"
version = "1.0.0"
description = ""
authors = [
    {name = "prosukrinaEA",email = "anonim1990as@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "redis (>=5.2.1,<6.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "pydantic (==2.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
